# HA_MqttNetworkMonitor

./: .gitignore  README.md  deploy.sh
.github/workflows/: build-windows-client.yml  ci.yml  release.yml
lovelace-cards/: README.md  hacs.json  mqtt-network-monitor-cards.js
monitor-clients/esp32/: README.md  library.json
monitor-clients/python/: README.md  WINDOWS.md  build_windows.py  config.example.yaml  config.windows.yaml  monitor_entry.py  pyproject.toml  setup_entry.py
monitor-clients/python/mqtt_monitor/: client.py  command_handler.py  config.py  config_handler.py  installer_gui.py  message.py  version.py  win_service.py  windows_service.py
monitor-clients/python/mqtt_monitor/plugins/: __init__.py  base.py  custom_command.py  linux_system.py  network_info.py  registry.py  system_resources.py  utils.py  windows_system.py
monitor-clients/python/tests/: conftest.py  test_command_handler.py  test_config.py
mqtt-network-monitor-addon/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  config.yaml  requirements-lock.txt  requirements.txt  run.sh
mqtt-network-monitor-addon/frontend/: package-lock.json  package.json  rollup.config.js
mqtt-network-monitor-addon/server/: auth.py  command_sender.py  config_assembler.py  device_registry.py  ha_entities.py  main.py  mqtt_handler.py  settings_manager.py  settings_resolver.py  tag_registry.py  topology.py
mqtt-network-monitor-addon/tests/: conftest.py  test_auth.py  test_device_registry.py  test_main.py  (+5 more)
mqtt-network-monitor-client/: config.example.yaml
mqtt-network-monitor-esp32/: library.json
(+70 files in other folders)
